--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "mit"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = ">=3.6"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.0.0"
