--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,13 +23,23 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install poetry && poetry update
-    - name: Lint with flake8
+
+    - name: Lint with ruff
       run: |
-        # stop the build if there are Python syntax errors or undefined names
-        poetry run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        poetry run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        poetry run ruff check
+
+    - name: Type checking with mypy
+      run: |
+        poetry run mypy --strict chatrouter
+        poetry run mypy --strict examples/example
+        poetry run mypy --strict examples/async_example
+        poetry run mypy --strict setup.py
+
+    - name: Unit testing
+      run: |
+        poetry run python -m unittest discover -s Tests -p 'test_*.py'
