--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,15 +8,18 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-types-pytz = "^2024.2.0.20241003"
+aiofiles = "^24.1.0"
+types-aiofiles = "^24.1.0.20240626"
+typing-extensions = "^4.12.2"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.8.1"
 mypy = "^1.13.0"
 pytz = "^2024.2"
+types-pytz = "^2024.2.0.20241003"
 types-setuptools = "^75.6.0.20241126"
-aiofiles = "^24.1.0"
-types-aiofiles = "^24.1.0.20240626"
+setuptools = "^75.6.0"
+twine = "^6.0.1"
 
 [build-system]
 requires = ["poetry-core"]
