rename models to asyncmodels in asyn_example

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,10 +35,7 @@ jobs:
 
     - name: Type checking with mypy
       run: |
-        poetry run mypy --strict chatrouter
-        poetry run mypy --strict examples/example
-        poetry run mypy --strict examples/async_example
-        poetry run mypy --strict setup.py
+        poetry run mypy --strict --exclude build .
 
     - name: Unit testing
       run: |
